# omni

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  cmake.toml
.github/.workflows/: windows-clang-cl.yml
.github/workflows/: clang-format.yml  clang-tidy.yml  generate-single-header.yml  windows-gcc.yml
cmake/: OmniOptions.cmake
examples/: .clang-tidy  CMakeLists.txt  api_set.cpp  api_set_map.cpp  executors.cpp  hash.cpp  lazy_import.cpp  module.cpp  module_exports.cpp  module_parser.cpp  modules.cpp  shared_user_data.cpp  status.cpp  typed_executors.cpp
include/: shadowsyscall.hpp
include/omni/: address.hpp  allocator.hpp  api_sets.hpp  concepts.hpp  hash.hpp  lazy_import.hpp  module.hpp  module_export.hpp  module_exports.hpp  modules.hpp  named_exports.hpp  omni.hpp  status.hpp  syscall.hpp
include/omni/detail/: config.hpp  export_directory_view.hpp  extract_function_name.hpp  fixed_string.hpp  hash_impl.hpp  inline_syscall.hpp  inplace_function.hpp  normalize_pointer_argument.hpp  shellcode.hpp
include/omni/impl/: modules.ipp  syscall.inl
include/omni/win/: directories.hpp  image.hpp  peb.hpp  unicode_string.hpp
single_header/: omni.hpp
tests/: .clang-tidy  CMakeLists.txt  address.cpp  api_sets.cpp  cache.cpp  extract_function_name.cpp  get_export.cpp  hasher.cpp  lazy_import.cpp  module.cpp  module_exports.cpp  modules.cpp  named_exports.cpp  nt_memory_allocator.cpp  shared_data.cpp  std_format.cpp  syscall.cpp  syscaller.cpp  test_utils.hpp
